# wsrpc-aiohttp

./: .browserslistrc  .drone.yml  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build.py  noxfile.py  package.json  poetry.toml  pylama.ini  pyproject.toml  pytest.ini  rollup.config.js  setup.py  tox.ini
.github/workflows/: tests.yml
doc/example/: index.html  server.py
docs/: Makefile  requirements.txt
docs/source/: 00-quick-start.rst  01-introduction.rst  01-minimal-application.rst  02-signals.rst  apidoc.rst  conf.py  explanation.puml  index.rst  loopback-call.puml  server-client.puml
docs/source/_templates/: layout.html
docs/source/examples/: client.py  index.html  just-grid.css  server.py
docs/source/examples/main/: client.py  server.py  web-client.html
tests/: conftest.py  test_auth.py  test_events.py  test_evetns.py  test_fails.py  test_frames_order.py  test_ping.py  test_route.py  test_rpc.py  test_rpc_allowed_route.py  test_rpc_legacy.py  test_rpc_prefix_route.py  test_rpc_route.py  test_serializer.py  test_signal.py
wsrpc_aiohttp/: __init__.py  signal.py  testing.py  version.py
wsrpc_aiohttp/static/: q.js  wsrpc.d.ts  wsrpc.es6.js  wsrpc.js  wsrpc.js.map  wsrpc.min.js  wsrpc.min.js.map
wsrpc_aiohttp/websocket/: __init__.py  abc.py  client.py  common.py  decorators.py  handler.py  route.py  tools.py
